--- a/src/Styles/TypingPopup.css
+++ b/src/Styles/TypingPopup.css
@@ -1,22 +1,27 @@
 .typing-popup-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-    margin: 10%;
-  }
-  
-  .typing-popup {
-    display: none;
-    margin-bottom: 20px;
-  }
-  
-  .typing-popup.show {
-    display: block;
-  }
-  
-  .task-cards-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  margin: 10%;
+}
+
+.typing-popup {
+  display: none;
+  margin-bottom: 20px;
+}
+
+.typing-popup.show {
+  display: block;
+}
+
+.task-cards-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+form {
+  margin-bottom: 10%;
+  margin-right: 10%;
+}
