--- a/src/Styles/TypingPopup.css
+++ b/src/Styles/TypingPopup.css
@@ -1,7 +1,4 @@
 .typing-popup-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   height: 100vh;
   margin: 10%;
 }
@@ -15,13 +12,8 @@
   display: block;
 }
 
-.task-cards-container {
+.flex-col-centered {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-form {
-  margin-bottom: 10%;
-  margin-right: 10%;
 }
