--- a/src/Styles/Task.css
+++ b/src/Styles/Task.css
@@ -12,6 +12,6 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.15); /* Glow effect on hover */
 }
 
-.MuiCardContent-root {
+div.MuiCardContent-root { /* specifying the div makes this more selective and take priority over other style on the component */
     padding-right: 3.5em; /* Prevent heading and text from going on top of buttons */
 }
